Huno will sell armor even if NH asks about it without having enough gold and will not offer the option once the armor is bought.
Hyglas will not end the dialog when asked what's in it for the NH for fetching a book for him.
Igaraz can be asked about the living rock, even after moving north from the tavern.
Isgaroth can be asked for a blessing after he tells who he is.
Isgaroth can be traded with as a mage, even if he was never spoken to before.
Jergan can be asked about the area and how to get to the castle at Fajeth's mine, even if he was never spoken to before.
Jergan does not create log entry for "Bad News" quest if Oric is already dead.
Jergan's dialog now takes into consideration whether NH already returned the pack leader claws to Lutero before talking to him about it.
Jorgen wields a Short Sword in Irdorath instead of a Sickle.
Kardif cannot be asked about who's in debt to Lehmar if NH already read the book.
Kardif cannot be talked about Attila if he is nearby and the dialog option does not kill him.
Karras does not offer his wares to non-mages.
Kati can be asked about location of Bengar and Sekobs farms only before talking to them.
Kati can die during his fight with the mercenaries.
Kati can only be asked for Baltram's shipment and food after asking her whether she is alright.
Kervo's quest fails if he is killed.
Knight 263 can be asked for a report only if NH is paladin.
Landlord will not give more then 5 beers per chapter and only 1 per day.
Lares can be asked for help with other issues after asking for money.
Lares has same sword in Irdorath as in Khorinis and doesn't carry an extra sword.
Lares has voiced dialog on the patched glitch correction option, when retrieving the ornament from him in chapter 3.
Lares properly closes the quest "Relief for Lares" in his dialog.
Lares wears the armor of the 'Ring of Water' instead of citizen clothes in Irdorath.
Lares won't comment on NH's choice of guild if he never was talked to before.